# pyakima

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.github/workflows/: benchmark.yml  build.yml  coverage.yml  deadcode.yml  docs.yml  docstrings.yml  lint.yml  publish.yml  pylint.yml  test.yml  typecheck.yml
demos/: animate_demo.py  speed_demo.py  step_demo.py
docs/: Makefile  __init__.py  api.md  conf.py  examples.md  index.md  performance.md  usage.md
docs/_static/: custom.css
docs/benchmarks/: m3_0_1_0_speeds.txt  sample_speeds.txt
pyakima/: __init__.py  _version.py  pyakima.py  speed_demo.py  step_demo.py
pyakima/demos/: __init__.py  _theme.py  animate_demo.py  animate_grid_demo.py  speed_demo.py  step_demo.py
tests/: __init__.py  test_pyakima.py
