[project]
name = "pyakima"
version = "0.1.0rc1"
description = "Tool for getting numba compilable akima spline interpolation"
readme = "README.md"
authors = [
  { name="Matthew C. Digman", email="matthew.digman@vanderbilt.edu" }
]
license = "Apache-2.0 WITH LLVM-exception"
license-files = ["LICENSE"]
# Trove classifiers (https://pypi.org/classifiers/). No "License ::" classifier is
# listed: the license is declared as the PEP 639 SPDX expression above, which
# setuptools>=77 (our build requirement) treats as the canonical source and for
# which license classifiers are deprecated. "Implementation :: CPython" is a real
# constraint -- numba does not support PyPy. The Python versions mirror
# requires-python and the CI test matrix; "Typing :: Typed" reflects the shipped
# py.typed marker.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
# Free-form PyPI search keywords (unvalidated, unlike classifiers). The name and
# description are already indexed, so these lean toward distinctive synonyms
# (makima, sub-spline) and the problem Akima solves (irregularly spaced data)
# rather than repeating the summary. Application domains (e.g. gravitational-wave
# / LISA PSD work) are intentionally left out here -- they belong in the README,
# not in keywords, since the package itself is a general interpolation primitive.
keywords = [
    "akima",
    "makima",
    "spline",
    "sub-spline",
    "akima spline",
    "interpolation",
    "irregularly spaced data",
    "irregular grid",
    "numba",
    "njit",
    "jit",
    "numerical",
    "scientific computing",
]
# Utility package: keep the runtime floors low so it installs broadly. These
# floors are also the "version-floor" end of the build matrix in
# .github/workflows/build.yml (uv's lowest-direct resolution installs exactly
# these), so they are exercised in CI.
#   - numpy 1.22 is the oldest release with cp310 wheels that numba 0.56 accepts.
#   - numba 0.56 is the oldest release with cp310 wheels; it caps numpy at <1.24,
#     so the floor pair (numpy 1.22 + numba 0.56) resolves together on 3.10.
dependencies = [
    "numpy>=1.22",
    "numba>=0.56",
]
requires-python = ">=3.10"

# Only the GitHub repository is included: it is the source, homepage, and issue
# tracker. There is no separate documentation site yet -- docs.yml builds the
# Sphinx HTML but only uploads it as a CI artifact -- so no Documentation link
# is listed until the docs are actually published somewhere.
[project.urls]
Homepage = "https://github.com/mcdigman/pyakima"
Repository = "https://github.com/mcdigman/pyakima"
Issues = "https://github.com/mcdigman/pyakima/issues"

[project.optional-dependencies]
# Development / test tooling. The linters and type-checkers here are also wired
# up as prek hooks (.pre-commit-config.yaml) and in the CI workflows: ruff +
# pyrefly run via prek in lint.yml, mypy + pyright run in typecheck.yml, and
# pytest runs in test.yml. Left unpinned (or on a low floor) so CI always uses
# the current releases.
dev = [
    "pytest>=7.0",
    "ruff",
    "mypy",
    "pyright",
    "pyrefly",
    "prek",
]
# Sphinx HTML documentation build (docs/). Built locally with
# `make -C docs html` and in CI by .github/workflows/docs.yml. autodoc imports
# pyakima, so numpy/numba come in transitively via the base install.
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
]
# Optional runtime backends for the scripts in the pyakima.demos subpackage
# (pyakima/demos/). speed_demo.py skips individual optional backends at runtime
# when an import is unavailable.
demos = [
    "scipy",
    "matplotlib",
    "pygsl_lite",
]

[tool.pyrefly]
# pyrefly runs as a prek hook (.pre-commit-config.yaml) and resolves the typed
# packages listed in that hook's additional_dependencies (numpy ships py.typed).
# pyakima/demos/ pulls in scipy/matplotlib/pygsl_lite, which the hook does not
# install, so those imports are silenced via ignore-missing-imports below.
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = []
ignore-missing-imports = ["pygsl_lite", "pygsl_lite.*", "matplotlib.pyplot", "scipy.interpolate"]

[tool.pyright]
# Settings for the pyright job in .github/workflows/typecheck.yml. pyright
# resolves types from the installed environment (the CI job installs .[dev]),
# so numpy is checked for real via its py.typed marker. numba ships no py.typed,
# so its missing-import reporting is disabled here.
pythonVersion = "3.10"
reportMissingImports = "none"
# Exclude dot-directories (e.g. the CI job's .venv) so pyright does not
# type-check installed dependencies, and the "build" copy the wheel build
# creates. The pyakima.demos subpackage is checked here (the pyright CI job
# installs scipy/matplotlib so its imports resolve; pygsl_lite is covered by
# reportMissingImports = "none").
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build"]

[tool.mypy]
# Settings for the mypy job in .github/workflows/typecheck.yml
strict = true
# A plain `mypy .` crawls the whole working tree. Skip the throwaway build/ tree
# (a wheel build leaves a second copy of the package at build/lib/pyakima, which
# otherwise collides with ./pyakima as "Duplicate module named pyakima") and the
# local virtualenv. A clean CI checkout has neither, so this only affects local
# runs; the typecheck.yml job additionally passes --explicit-package-bases.
exclude = ['^build/', '^\.venv/']

[[tool.mypy.overrides]]
module = ["pygsl_lite", "pygsl_lite.*"]
ignore_missing_imports = true



[tool.pydoclint]
# Docstring-signature linting for the numpy-style docstrings in pyakima (run by
# .github/workflows/docstrings.yml). pydoclint is the maintained successor to
# the now-archived darglint
# The stricter-than-darglint DOC105 (arg type-hint matching) and DOC503 (raises
# vs. `assert`) findings are intentionally left enabled.
style = "numpy"
check-return-types = true
check-class-attributes = true
allow-init-docstring = true
# pydoclint's built-in default only excludes \.git|\.tox, so a whole-tree run
# (pydoclint .) descends into .venv/build. Set the exclude here (config, not the
# CI --exclude flag) so both the workflow's `pydoclint pyakima` run and a local
# `pydoclint .` skip the same paths. pyakima/demos ships as an example subpackage
# but is deliberately kept out of docstring linting (as it was before it moved
# under pyakima/, and as tests/ still is).
exclude = '\.git|\.tox|\.venv|\.eggs|_build|buck-out|build|dist|__pycache__|\.mypy_cache|\.pytest_cache|\.ruff_cache|pyakima/demos/'

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# The distribution ships pyakima and its pyakima.demos example subpackage; the
# top-level tests/ directory is not part of it. The "pyakima*" pattern matches
# both pyakima and pyakima.demos while excluding tests/, which also stops
# setuptools' flat-layout auto-discovery from erroring on multiple top-level
# directories.
[tool.setuptools.packages.find]
include = ["pyakima*"]
